[package]
name = "jwt-decode"
version = "0.3.0"
authors = ["Christoph Parnitzke <christoph.parnitzke@tutamail.com>"]
edition = "2018"
description = "A JSON Web Token CLI Decoder in Rust"
readme = "README.md"
repository = "https://github.com/Lazalatin/rust-jwt"
license = "MIT"

[[bin]]
name = "jwt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.3"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
